// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Admin /> renders correctly calls getDashboardAnalytics prop 1`] = `
<div>
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1>
            Learner and Progress Report
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="row mt-4"
    >
      <div
        className="col"
      >
        <h2>
          Overview
        </h2>
      </div>
    </div>
    <div
      className="row mt-4"
    >
      <div
        className="col"
      >
        <h2>
          Full Report
        </h2>
        <div
          className="row"
        >
          <div
            className="col-12 col-md-6 text-md-right"
          >
            <button
              className="btn btn-outline-primary"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <span>
                <span
                  className="fa fa-download"
                />
                 Download full report (CSV)
              </span>
            </button>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <p>
          For more information, contact edX Enterprise Support at 
          <a
            href="mailto:enterprise@edx.org"
            onClick={null}
            target="_self"
          >
             enterprise@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Admin /> renders correctly with dashboard analytics data 1`] = `
<div>
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1>
            Learner and Progress Report
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="row mt-4"
    >
      <div
        className="col"
      >
        <h2>
          Overview
        </h2>
        <div
          className="row mt-3 equal-col-height"
        >
          <div
            className="col-xs-12 col-md-6 col-xl-3 mb-3"
          >
            <div
              className="card number-card"
            >
              <div
                className="card-body"
              >
                <h5
                  className="card-title d-flex align-items-center justify-content-between"
                >
                  <span>
                    3
                  </span>
                  <div>
                    <span
                      aria-hidden={true}
                      className="fa fa-users d-flex align-items-center justify-content-center"
                      id="Icon1"
                    />
                  </div>
                </h5>
                <p
                  className="card-text"
                >
                  total number of learners registered
                </p>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 col-md-6 col-xl-3 mb-3"
          >
            <div
              className="card number-card"
            >
              <div
                className="card-body"
              >
                <h5
                  className="card-title d-flex align-items-center justify-content-between"
                >
                  <span>
                    1
                  </span>
                  <div>
                    <span
                      aria-hidden={true}
                      className="fa fa-check d-flex align-items-center justify-content-center"
                      id="Icon1"
                    />
                  </div>
                </h5>
                <p
                  className="card-text"
                >
                  learners enrolled in at least one course
                </p>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 col-md-6 col-xl-3 mb-3"
          >
            <div
              className="card number-card"
            >
              <div
                className="card-body"
              >
                <h5
                  className="card-title d-flex align-items-center justify-content-between"
                >
                  <span>
                    1
                  </span>
                  <div>
                    <span
                      aria-hidden={true}
                      className="fa fa-eye d-flex align-items-center justify-content-center"
                      id="Icon1"
                    />
                  </div>
                </h5>
                <p
                  className="card-text"
                >
                  active learners in the past week
                </p>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 col-md-6 col-xl-3 mb-3"
          >
            <div
              className="card number-card"
            >
              <div
                className="card-body"
              >
                <h5
                  className="card-title d-flex align-items-center justify-content-between"
                >
                  <span>
                    1
                  </span>
                  <div>
                    <span
                      aria-hidden={true}
                      className="fa fa-trophy d-flex align-items-center justify-content-center"
                      id="Icon1"
                    />
                  </div>
                </h5>
                <p
                  className="card-text"
                >
                  course completions
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row mt-4"
    >
      <div
        className="col"
      >
        <h2>
          Full Report
        </h2>
        <div
          className="row"
        >
          <div
            className="col-12 col-md-6 py-3"
          >
            Showing data as of 
            July 31, 2018
          </div>
          <div
            className="col-12 col-md-6 text-md-right"
          >
            <button
              className="btn btn-outline-primary"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <span>
                <span
                  className="fa fa-download"
                />
                 Download full report (CSV)
              </span>
            </button>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <p>
          For more information, contact edX Enterprise Support at 
          <a
            href="mailto:enterprise@edx.org"
            onClick={null}
            target="_self"
          >
             enterprise@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Admin /> renders correctly with error state 1`] = `
<div>
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1>
            Learner and Progress Report
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="row mt-4"
    >
      <div
        className="col"
      >
        <h2>
          Overview
        </h2>
        <div
          className="mt-3 alert fade alert-danger show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            <div
              className="d-flex"
            >
              <div
                className="icon mr-2"
              >
                <div>
                  <span
                    aria-hidden={true}
                    className="fa fa-times-circle"
                    id="Icon1"
                  />
                </div>
              </div>
              <div
                className="message"
              >
                <span
                  className="title"
                >
                  Unable to load overview
                </span>
                <span>
                  Try refreshing your screen (Network Error)
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row mt-4"
    >
      <div
        className="col"
      >
        <h2>
          Full Report
        </h2>
        <div />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <p>
          For more information, contact edX Enterprise Support at 
          <a
            href="mailto:enterprise@edx.org"
            onClick={null}
            target="_self"
          >
             enterprise@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Admin /> renders correctly with loading state 1`] = `
<div>
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1>
            Learner and Progress Report
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="row mt-4"
    >
      <div
        className="col"
      >
        <h2>
          Overview
        </h2>
        <div
          className="overview mt-3 loading d-flex align-items-center justify-content-center"
        >
          <span>
            Loading...
          </span>
        </div>
      </div>
    </div>
    <div
      className="row mt-4"
    >
      <div
        className="col"
      >
        <h2>
          Full Report
        </h2>
        <div />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <p>
          For more information, contact edX Enterprise Support at 
          <a
            href="mailto:enterprise@edx.org"
            onClick={null}
            target="_self"
          >
             enterprise@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
</div>
`;
